add(interp-Lint): predicates

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -10,6 +10,7 @@ common defaults
   default-extensions:
     BlockArguments
     DerivingStrategies
+    LambdaCase
 
 common warnings
   ghc-options:
