add(X86Int): Arg, Instr, Frame, Block, Program

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -27,6 +27,7 @@ library
     , mtl
     , transformers
     , unordered-containers
+    , PyF
 
 executable eocia-haskell
   import:           warnings
