--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -30,10 +30,11 @@ library
     X86Int
 
   build-depends:
-    , base                  >=4.7 && <5
+    , base                  >=4.7   && <5
     , hashable
     , mtl
     , PyF
+    , text                  ==2.1.2
     , unordered-containers
 
 executable eocia-haskell
