refactor(*): use `Pretty` instead of `Show`

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -33,7 +33,7 @@ library
     , base                  >=4.7   && <5
     , hashable
     , mtl
-    , PyF
+    , prettyprinter
     , text                  ==2.1.2
     , unordered-containers
 
