--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -55,6 +55,7 @@ test-suite eocia-haskell-test
   other-modules:
     Arbitrary
     TestLInt
+    TestLVar
 
   build-depends:
     , base              >=4.7   && <5
