--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -59,6 +59,7 @@ test-suite eocia-haskell-test
     TestLInt
     TestLVar
     TestPipeline
+    TestX86Int
 
   build-depends:
     , base                  >=4.7   && <5
