--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -29,6 +29,7 @@ library
     Stage.LVarMon
     Stage.X86
     Stage.X86Int
+    Stage.X86Var
 
   build-depends:
     , base                  >=4.7   && <5
