add(Pipeline): build interference graph

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -34,6 +34,7 @@ library
     Stage.X86Var
 
   build-depends:
+    , algebraic-graphs
     , base                  >=4.7   && <5
     , hashable
     , mtl
