add(test/Pipeline): uncoverLive and buildInterference tests

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -68,6 +68,7 @@ test-suite eocia-haskell-test
     TestX86Int
 
   build-depends:
+    , algebraic-graphs
     , base                  >=4.7   && <5
     , eocia-haskell
     , mtl
