--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -16,7 +16,11 @@ common warnings
     -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
     -Wno-unsafe -Wno-missing-safe-haskell-mode
     -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
-    -Wno-orphans
+    -Wno-orphans -fhide-source-paths -Wno-missing-exported-signatures
+    -Wno-missed-specialisations -Wno-all-missed-specialisations
+    -Wno-safe -Wno-monomorphism-restriction
+    -Wno-prepositive-qualified-module -Wno-unused-packages
+    -Wno-missing-role-annotations -Wno-missing-poly-kind-signatures
 
 common dependencies
   build-depends:
