--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -10,6 +10,7 @@ common defaults
   default-extensions:
     BlockArguments
     DeriveAnyClass
+    MultilineStrings
 
 common warnings
   ghc-options:
