refactor: constructor name listing with enumerate

--- a/eocia-haskell.cabal
+++ b/eocia-haskell.cabal
@@ -32,6 +32,7 @@ common dependencies
     , effectful-core
     , effectful-plugin
     , effectful-th
+    , extra
     , hashable
     , prettyprinter
     , text
